change img using webp

--- a/src/components/Home/_index.scss
+++ b/src/components/Home/_index.scss
@@ -3,7 +3,7 @@
     height: 100%;
 
     &-banner {
-        background-image: url("../../assets/img/banner.jpg");
+        background-image: url("../../assets/img/banner.webp");
         width: 100%;
         min-height: 900px;
         max-height: fit-content;
@@ -107,7 +107,7 @@
             div {
             }
             li {
-                background-image: url("../../assets/img/bgdesc.svg");
+                background-image: url("../../assets/img/bgdesc.webp");
                 background-size: 642.5px;
                 background-repeat: repeat;
                 // backgr
