--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -1,1 +1,1 @@
-@import "LoadingScreen/loadingScreen", "Home/index", "Layouts/layouts";
+@import "LoadingScreen/loadingScreen", "Home/index", "Layouts/layouts", "Menu/index";
