--- a/src/components/Home/_index.scss
+++ b/src/components/Home/_index.scss
@@ -88,7 +88,7 @@
             padding: 0 40px;
         }
         @media (max-width: 524px) {
-            padding: 30px 20px;
+            padding: 0px 20px 20px 20px;
         }
         & .container {
             // text-align: left;
