--- a/src/components/Menu/_index.scss
+++ b/src/components/Menu/_index.scss
@@ -1,5 +1,6 @@
 .menu-purchase {
     max-width: 500px;
+    min-height: 300px;
     height: -moz-fit-content;
     height: fit-content;
     text-align: center;
@@ -35,13 +36,17 @@
     &__btn {
         margin-top: 20px !important;
         width: 100%;
-        background-color: #19be19;
+        background-color: orange;
         height: 40px;
         border-radius: 10px;
         margin: 0 auto;
         display: flex;
         justify-content: center;
         align-items: center;
-        @med;
+    }
+    &__btn:hover {
+        background-color: white;
+        color: orange;
+        border: 2px solid orange;
     }
 }
