--- a/src/components/Menu/_index.scss
+++ b/src/components/Menu/_index.scss
@@ -9,6 +9,7 @@
     padding: 30px;
     border: 1px white solid;
     border-radius: 10px;
+    margin-bottom: 30px;
     @media (max-width: 524px) {
         margin: 20px;
     }
