--- a/src/components/Home/_index.scss
+++ b/src/components/Home/_index.scss
@@ -104,6 +104,9 @@
             // background-position: cover;
             padding-left: 0px;
             list-style: none;
+            @media (max-width: 524px) {
+                margin-top: 0px;
+            }
             div {
             }
             li {
