--- a/src/components/Menu/_index.scss
+++ b/src/components/Menu/_index.scss
@@ -11,7 +11,7 @@
     border-radius: 10px;
     margin-bottom: 30px;
     @media (max-width: 524px) {
-        margin: 20px;
+        margin: 20px !important;
     }
     &__box {
         p {
